--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t  web:1 .
+      - docker build -t  webapp .
       - docker tag web:1 981942040659.dkr.ecr.us-east-1.amazonaws.com/webapp
   post_build:
     commands:
