--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t  webapp .
-      - docker tag web:1 981942040659.dkr.ecr.us-east-1.amazonaws.com/webapp
+      - docker tag webapp 981942040659.dkr.ecr.us-east-1.amazonaws.com/webapp
   post_build:
     commands:
       - echo Build completed on `date`
