--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,11 +10,10 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t webapp:1 .
-      - docker tag webapp:1 981942040659.dkr.ecr.us-east-1.amazonaws.com/webapp
+      - docker tag webapp:1 981942040659.dkr.ecr.us-east-1.amazonaws.com/webserver
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 981942040659.dkr.ecr.us-east-1.amazonaws.com/webapp
-      
+      - docker push 981942040659.dkr.ecr.us-east-1.amazonaws.com/webserver      
 
